--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^19.1.1",
+    "react-confetti-explosion": "^3.0.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1"
